[package]
name = "TheSy"
version = "0.1.0"
authors = ["Eytan Singher <eytan.singher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { path = "../egg" }
cached = "0.18.0"
itertools= "0.9.0"
symbolic_expressions = "5.0.3"
smallvec = "1.4.2"
cute = "0.3.0"
multimap = "0.8.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simplelog = "0.8.0"
structopt = "0.3.17"
z3-sys = "0.6.2"
permutohedron = "0.2.4"
lazy_static = "1.4.0"
global_counter = "0.2.1"

serde = {version = "1.0.116", features = ["derive"], optional = true}
serde_json = {version = "1.0.58", optional = true}

[features]
stats = ["serde", "serde_json", "egg/serde-1"]

#[build]
#rustflags = ["-C", "link-args=-Wl,-stack_size,0x100000000"]    # custom flags to pass to all compiler invocations