[package]
name = "TheSy"
version = "0.1.0"
authors = ["Eytan Singher <eytan.singher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { path = "../egg" }
thesy_parser = { git = "https://github.com/eytans/TheSyParser.git", branch = "main" }
#thesy_parser = { path = "../../CLionProjects/TheSyParser" }
cached = "0.18.0"
itertools= "0.10.3"
symbolic_expressions = "5.0.3"
smallvec = "1.4.2"
cute = "0.3.0"
multimap = "0.8.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simplelog = "0.10.0"
structopt = "0.3.17"
z3-sys = "0.6.2"
permutohedron = "0.2.4"
lazy_static = "1.4.0"
global_counter = "0.2.1"
bimap = "0.5.3"
indexmap = "1.9.0"
strum = "0.24.1"
strum_macros = "0.24.3"

serde = {version = "1.0.116", features = ["derive"], optional = true}
serde_cbor = {version = "0.11.2"}
serde_json = {version = "1.0.88", optional = true}

cap = "0.1.0"

[dev-dependencies]
proptest = "1.0.0"

[features]
#default = ["split_colored", "stats"]
default = ["split_clone", "stats"]
#default = ["split_clone", "keep_splits", "stats"]
stats = ["serde", "serde_json"]
split_colored = ["egg/colored"]
split_clone = []
no_split = ["no_expl_split"]
no_expl_split = []
keep_splits= []

#[build]
#rustflags = ["-C", "link-args=-Wl,-stack_size,0x100000000"]    # custom flags to pass to all compiler invocations

#[profile.test]
#opt-level = 2